# YAWN1

./: .gitignore  CMakeLists.txt  LICENSE
Example/: CMakeLists.txt
Example/Data/: MyScene.prefab
Example/Source/: Main.cpp
Include/YAWN/: Animation.hpp  AnimationPlayer.hpp  Application.hpp  Array.hpp  ArrayView.hpp  CanvasItem.hpp  Clock.hpp  Color.hpp  Core.hpp  DirectoryMonitor.hpp  Error.hpp  FNV1a.hpp  Function.hpp  GraphicsDevice.hpp  GraphicsResource.hpp  Hash.hpp  HashMap.hpp  IdPool.hpp  Image.hpp  Input.hpp  Logger.hpp  Main.hpp  Managed.hpp  Map.hpp  Math.hpp  Memory.hpp  Mutex.hpp  Node.hpp  Node2D.hpp  Optional.hpp  Platform.hpp  Reference.hpp  Reflection.hpp  Resource.hpp  ResourceManager.hpp  Scene.hpp  Settings.hpp  Signal.hpp  Sprite.hpp  String.hpp  (+9 more)
Source/: Animation.cpp  AnimationPlayer.cpp  Application.cpp  CanvasItem.cpp  Clock.cpp  Color.cpp  DirectoryMonitor.cpp  GraphicsDevice.cpp  GraphicsResource.cpp  Hash.cpp  IdPool.cpp  Image.cpp  Logger.cpp  Main.cpp  Math.cpp  Memory.cpp  Mutex.cpp  Node.cpp  Node2D.cpp  Platform.cpp  Reference.cpp  Reflection.cpp  ResourceManager.cpp  Scene.cpp  Settings.cpp  Sprite.cpp  String.cpp  Texture.cpp  Thread.cpp  TileMap.cpp  TileMapData.cpp  Variant.cpp  Vector2.cpp
Source/SDL2/: ClockSDL2.cpp  ClockSDL2.hpp  CommonSDL2.cpp  CommonSDL2.hpp  GraphicsDeviceSDL2.cpp  GraphicsDeviceSDL2.hpp  MutexSDL2.cpp  MutexSDL2.hpp  PlatformSDL2.cpp  PlatformSDL2.hpp  ThreadSDL2.cpp  ThreadSDL2.hpp
Source/Win32/: DirectoryMonitorWin32.cpp  DirectoryMonitorWin32.hpp
